# pf2e-character-manager

./: .gitignore  .gitmodules  pyproject.toml
src/character_manager/: __init__.py  blog.db
src/character_manager/templates/: create.html  posts.html
tests/: conftest.py  test_cm.py
