[project]
name = "character-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Calandra",email = "calandra.aj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "quart-discord (>=2.1.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "character_manager", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db = "character_manager:init_db"
start = "character_manager:run"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/character_manager"]
